--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+/*
 #screen{
     background-color: rgb(0, 0, 0);
     height: 300px;
     width: 80%;
     
 }
+
 #player{
     background-color:blanchedalmond;
     height: 20px;
@@ -11,3 +13,4 @@
    transition: 0.2s;
     margin: 0 0 0 0;
 }
+*/
